# codewars

./: README.md
kata/5e335f9712b02a001a874eef/: CMakeLists.txt  description
kata/5e335f9712b02a001a874eef/poc/: poc.cpp  poc2.cpp  poc3.cpp
kata/5e335f9712b02a001a874eef/solution/: debugPrinting.cpp  debugPrinting.hpp  solution.cpp  solution.hpp
kata/5e335f9712b02a001a874eef/ut/: test.cpp
